Updates from Overleaf

--- a/rozdziały/analiza_matematyczna.tex
+++ b/rozdziały/analiza_matematyczna.tex
@@ -853,9 +853,7 @@ Mówimy wtedy, że całka niewłaściwa $f$ na $[a,\infty)$ jest zbieżna. Jeśl
     Zauważmy, że do policzenia pierwszej pochodnej, musimy mieć warunek $f_{a,b}(0)=b=1$, żeby funkcja była ciągła, więc $a$ w tym przypadku może być dowolne, czyli \textbf{B.} to \texttt{TAK}. Do policzenia drugiej pochodnej, musi być znów $f_{a,b}'(0)=a=1$, aby mieć ciągłość, ale po zastosowaniu drugiej pochodnej funkcja przestaje być ciągła, więc nigdy nie będzie dwukrotnie różniczkowalna, więc \textbf{A.} to \texttt{NIE}. Podpunkt \textbf{C.} jest prawdziwy, tylko dla $a=b=1$ funkcja jest różniczkowalna ($f_{a,b}$ ciągła i pierwsza pochodna ciągła).
 
     % TODO: przeredagować rozwiązanie i usunąć blef
-    \begin{editorsnote}
-        Tu uwaga na blef: różniczkowalność nie oznacza ciągłości pochodnej, a dwukrotna różniczkowalność -- ciągłości drugiej pochodnej.
-    \end{editorsnote}
+    \textbf{\red{Przyp. red.: tu uwaga na blef; różniczkowalność nie oznacza ciągłości pochodnej, a dwukrotna różniczkowalność -- ciągłości drugiej pochodnej.}}
 
     % Kasia K
     \sol Funkcja $f:(0;1) \to \RR$ zadana wzorem $f(x) = \sqrt{|\sin{x}|}$
@@ -896,9 +894,7 @@ Mówimy wtedy, że całka niewłaściwa $f$ na $[a,\infty)$ jest zbieżna. Jeśl
     \textbf{A.} i \textbf{B}. Nie jest różniczkowalna, podobnie jak $|x|$
 
     % TODO: przeredagować rozwiązanie
-    \begin{editorsnote}
-        Powyżej zbyt słabe wytłumaczenie, istnieją przecież funkcje kwadratowe, które obłożone modułem są różniczkowalne.
-    \end{editorsnote}
+    \textbf{\red{Przyp. red.: powyżej zbyt słabe wytłumaczenie, istnieją przecież funkcje kwadratowe, które obłożone modułem są różniczkowalne.}}
     
     \textbf{C.} Pierwszy szereg taylora w otoczeniu $x_0 = 0$ można obliczyć z $f(x_0) + f'(x_0)(x-x_0)$. W otoczeniu $x_0$ funkcja $f(x)$ zachowuje się jak $3x-x^2 + 5$ Mamy wtedy $f'(x) = -2x +3$ zatem pierwszy szereg taylora w otoczeniu $x_0 = 0$ wynosi $f(x) \approx 8 - 2x$ dla $x = 1$ mamy $6$, $6 \neq \sqrt{2}$ 
     
