--- a/style.tex
+++ b/style.tex
@@ -117,6 +117,7 @@
 \renewcommand{\cftchapafterpnum}{\vspace{4pt}}
 \renewcommand{\cftchapaftersnum}{.}
 \renewcommand{\cftsecaftersnum}{.}
+\setlength{\cftchapnumwidth}{2em}
 
 % --- Ramki
 \definecolor{exampleColor}{HTML}{f89b0f}
