Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -48,14 +48,16 @@
 
 \input{rozdziały/programowanie_obiektowe.tex}
 
-\input{rozdziały/ipp_i_blok_jnp.tex}
+% Ten rozdział nie jest potrzebny (IPP i JNP wypadły z podstawy programowej obecnego egzaminu licencjackiego), ale zostawiamy go dla potencjalnych przyszłych pokoleń.
+% \input{rozdziały/ipp_i_blok_jnp.tex}
+
+\input{rozdziały/systemy_operacyjne}
 
 \input{rozdziały/aplikacje_www.tex}
 
 \input{rozdziały/sieci_komputerowe.tex}
 
-\input{rozdziały/systemy_operacyjne}
-
-\input{rozdziały/bezpieczenstwo_systemow_komputerowych.tex}
+% Ten rozdział nie jest potrzebny (BSK wypadło z podstawy programowej obecnego egzaminu licencjackiego), ale zostawiamy go dla potencjalnych przyszłych pokoleń.
+% \input{rozdziały/bezpieczenstwo_systemow_komputerowych.tex}
 
 \end{document}
