Final changes before publishing

--- a/main.tex
+++ b/main.tex
@@ -38,7 +38,7 @@
 \input{rozdziały/jezyki_automaty_i_obliczenia.tex}
 
 % Ten rozdział nie jest potrzebny (SemWer wypadł z podstawy programowej obecnego egzaminu licencjackiego), ale zostawiamy go dla potencjalnych przyszłych pokoleń.
-\input{rozdziały/semantyka_i_weryfikacja_programow.tex}
+% \input{rozdziały/semantyka_i_weryfikacja_programow.tex}
 
 \input{rozdziały/bazy_danych.tex}
 
