Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,15 @@
 {\huge\selectfont\sffamily\bfseries\textcolor{white}{Egzamin z informatyki na MIMUW}}
 \restoregeometry
 
+% Strona redakcyjna
+\vspace*{\fill}
+Ten dokument jest udostępniany na licencji \href{http://creativecommons.org/licenses/by-nc-sa/4.0/deed.pl}{Creative Commons BY-NC-SA 4.0}.
+
+Zdjęcie z okładki pochodzi z bazy zdjęć Biura Promocji UW (\textcopyright \ Uniwersytet Warszawski).
+
+\textbf{Redakcja:} Patryk Bundyra, Filip Głębocki, Tomasz Głąb, Wiktor Grzankowski, Katarzyna Kloc, Jan Kwiatkowski, Katarzyna Mielnik, Grzegorz Nowakowski, Julia Podrażka, Michał Staniewski, Błażej Wilkoławski
+\newpage
+
 \input{rozdziały/od_autorow.tex}
 \newpage
 
